--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,10 +1,16 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}Espace d'inscription{% endblock %}
 
 {% block body %}
-    <h1>Connexion</h1>
-
-    {{ form_start(registrationForm) }}
-    {{ form_end(registrationForm) }}
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-6">
+            <h1 class="text-center mt-2">Inscription</h1>
+                {{ form_start(registrationForm) }}
+                {{ form_end(registrationForm) }}
+            </div>
+        </div>
+    </div>
 {% endblock %}
+
