--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -30,6 +30,11 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link active" href="{{path('user_reservation', {id: app.user.id})}}">
+                            Réservations
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{{ path('app_logout') }}">Déconnexion</a>
                     </li>
                     {% else %}
