amélioration des vues

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -6,11 +6,12 @@
 <style>
         .carousel-item img {
             object-fit: cover;
-            height: 1000px;
+            height: 750px;
             width: 100%;
         }
 </style>
     <div class="container-fluid p-5">
+        <a href="{{ path('app_voiture') }}">Liste des voitures </a>
         <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
             <!-- Indicateurs -->
             <ol class="carousel-indicators">
