--- a/templates/reservation/list.html.twig
+++ b/templates/reservation/list.html.twig
@@ -9,6 +9,7 @@
         <table class="table table-striped">
             <thead>
                 <tr>
+                    <th>Numéro de réservation</th>
                     <th>Voiture</th>
                     <th>Date de début</th>
                     <th>Date de fin</th>
@@ -18,6 +19,7 @@
             <tbody>
                 {% for reservation in reservationEnCours %}
                     <tr>
+                        <td>{{ reservation.numeroReservation }}</td>
                         <td>{{ reservation.voiture.marque }} : {{ reservation.voiture.modele }}</td>
                         <td>{{ reservation.dateDebut|date('d-m-Y H:i') }}</td>
                         <td>{{ reservation.dateFin|date('d-m-Y H:i') }}</td>
@@ -35,6 +37,7 @@
         <table class="table table-striped">
             <thead>
                 <tr>
+                    <th>Numéro de réservation</th>
                     <th>Voiture</th>
                     <th>Date de début</th>
                     <th>Date de fin</th>
@@ -45,6 +48,7 @@
             <tbody>
                 {% for reservation in reservationFutur %}
                     <tr>
+                        <td>{{ reservation.numeroReservation }}</td>
                         <td>{{ reservation.voiture.marque }} : {{ reservation.voiture.modele }}</td>
                         <td>{{ reservation.dateDebut|date('d-m-Y H:i') }}</td>
                         <td>{{ reservation.dateFin|date('d-m-Y H:i') }}</td>
@@ -69,6 +73,7 @@
         <table class="table table-striped">
             <thead>
                 <tr>
+                    <th>Numéro de réservation</th>
                     <th>Voiture</th>
                     <th>Date de début</th>
                     <th>Date de fin</th>
@@ -78,6 +83,7 @@
             <tbody>
                 {% for reservation in reservationPasse %}
                     <tr>
+                        <td>{{ reservation.numeroReservation }}</td>
                         <td>{{ reservation.voiture.marque }} : {{ reservation.voiture.modele }}</td>
                         <td>{{ reservation.dateDebut|date('d-m-Y H:i') }}</td>
                         <td>{{ reservation.dateFin|date('d-m-Y H:i') }}</td>
